<resources>
    <string name="app_name">Lusitania Travel</string>
    <string name="txt_main_localizacao">Localização Atual</string>
    <string name="txt_main_checkin">Check-In</string>
    <string name="txt_main_checkout">Check-Out</string>
    <string name="txt_main_quartos">Quartos</string>
    <string name="txt_main_pessoas">Pessoas</string>
    <string name="txt_main_pesquisar">Pesquisar</string>
    <string name="txt_detalhes">Detalhes</string>
    <string name="txt_username">Username</string>
    <string name="txt_passwordSignUp">Password</string>
    <string name="txt_repeatPassword">Repeat Password</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_emailSignUp">Email</string>
    <string name="txt_telemovel">Telemovel</string>
    <string name="txt_rua">Rua</string>
    <string name="txt_localidade">Localidade</string>
    <string name="txt_codPostal">Codigo Postal</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="btn_login">Login</string>
</resources>