<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".SignUpActivity"
    android:name="Sign Up">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:src="@drawable/logo_horizontal" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_username"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_passwordSignUp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_repeatPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_nome"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etEmailSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_emailSignUp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etTelemovel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_telemovel"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etRua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_rua"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etLocalidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_localidade"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etCodPostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_codPostal"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:text="@string/btnSignUp"
        android:onClick="onClickSignUp"
        android:backgroundTint="#3c9cd4"/>



</LinearLayout>